--- a/README.Rmd
+++ b/README.Rmd
@@ -12,26 +12,26 @@ knitr::opts_chunk$set(
   out.width = "100%"
 )
 ```
-# jazz
+# dance
 
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of jazz is to ... `r emo::ji("sax")` `r emo::ji("musical notes")`
+Dancing `r emo::ji("woman_dancing")` with the stats, aka `tibble()` dancing `r emo::ji("man_dancing")`. 
 
 ## Example
 
 This is a basic example which shows you how to solve a common problem:
 
 ```{r example}
-library(jazz)
+library(dance)
 library(tidyselect)
 
 g <- dplyr::group_by(iris, Species)
 
 # that's a bit like dplyr::summarise 
 g %>% 
-  jazz(
+  waltz(
     Sepal.Length = ~ mean(Sepal.Length), 
     Sepal.Width  = ~ mean(Sepal.Width) 
   )
@@ -39,7 +39,7 @@ g %>%
 # however it's using formulas instead of quosures
 # and similarly to rap it can empower the lhs of the formula, 
 g %>% 
-  jazz(
+  waltz(
     Sepal.Length = character() ~ mean(Sepal.Length)
   )
 
@@ -47,28 +47,19 @@ g %>%
 # the only requirement is that the vec_size() 
 # of the output has to be 1
 g %>% 
-  jazz(
+  waltz(
     Sepal =  ~ tibble(Sepal.Length = mean(Sepal.Length), Sepal.Width = mean(Sepal.Width))
   )
 ```
 
 ### swing
 
-There's no `jazz_at()` or `jazz_if()` but you can use `swing()` if you want to 
+There's no `waltz_at()` or `waltz_if()` but you can use `swing()` if you want to 
 use the same function for a bunch of columns: 
 
 ```{r}
 g %>% 
-  jazz(
-    !!!swing(mean, ends_with("th"))
-  )
-```
-
-aaaand you actually do not need to `!!!`, this works as well : 
-
-```{r}
-g %>% 
-  jazz(
+  waltz(
     swing(mean, ends_with("th"))
   )
 ```
@@ -84,7 +75,7 @@ of a glue pattern:
 
 ```{r}
 g %>% 
-  jazz(
+  waltz(
     swing(mean, starts_with("Petal"), .name = "mean_{var}"),
     swing(median, starts_with("Petal"), .name = "median_{var}")
   )
@@ -94,7 +85,7 @@ The first argument of `swing()` is a function, or a formula:
 
 ```{r}
 g %>% 
-  jazz(
+  waltz(
     swing(~mean(., na.rm = TRUE), starts_with("Petal"), .name = "mean_{var}")
   )
 ```
