--- a/README.Rmd
+++ b/README.Rmd
@@ -28,65 +28,5 @@ library(dance)
 library(tidyselect)
 
 g <- dplyr::group_by(iris, Species)
-
-# that's a bit like dplyr::summarise 
-g %>% 
-  waltz(
-    Sepal.Length = ~ mean(Sepal.Length), 
-    Sepal.Width  = ~ mean(Sepal.Width) 
-  )
-
-# however it's using formulas instead of quosures
-# and similarly to rap it can empower the lhs of the formula, 
-g %>% 
-  waltz(
-    Sepal.Length = character() ~ mean(Sepal.Length)
-  )
-
-# the rhs of the formula can make tibbles too 
-# the only requirement is that the vec_size() 
-# of the output has to be 1
-g %>% 
-  waltz(
-    Sepal =  ~ tibble(Sepal.Length = mean(Sepal.Length), Sepal.Width = mean(Sepal.Width))
-  )
+# TODO: waltz, swing, polka, tango
 ```
-
-### swing
-
-There's no `waltz_at()` or `waltz_if()` but you can use `swing()` if you want to 
-use the same function for a bunch of columns: 
-
-```{r}
-g %>% 
-  waltz(
-    swing(mean, ends_with("th"))
-  )
-```
-
-The results are named after the names of the input columns, i.e. 
-
-```{r}
-tidyselect::vars_select(dplyr::tbl_vars(g), ends_with("th"))
-```
-
-The `.name` gives you a way to control the names by means 
-of a glue pattern: 
-
-```{r}
-g %>% 
-  waltz(
-    swing(mean, starts_with("Petal"), .name = "mean_{var}"),
-    swing(median, starts_with("Petal"), .name = "median_{var}")
-  )
-```
-
-The first argument of `swing()` is a function, or a formula: 
-
-```{r}
-g %>% 
-  waltz(
-    swing(~mean(., na.rm = TRUE), starts_with("Petal"), .name = "mean_{var}")
-  )
-```
-
