--- a/README.Rmd
+++ b/README.Rmd
@@ -180,9 +180,9 @@ g %>%
 
 ### bolero and mambo
 
-`bolero()` is similar to `dplyr::filter()` but only takes one thing, as a formula. The 
-formula may be made by `mambo()` if you want to apply the same predicate to a tidyselection 
-of columns: 
+`bolero()` is similar to `dplyr::filter()`. 
+The formulas may be made by `mambo()` if you want to apply the same 
+predicate to a tidyselection of columns: 
 
 ```{r}
 g %>% 
