--- a/README.Rmd
+++ b/README.Rmd
@@ -22,6 +22,17 @@ Dancing `r emo::ji("woman_dancing")` with the stats, aka `tibble()` dancing `r e
 `dance` is a sort of reinvention of `dplyr` classic verbs, with a more modern stack 
 underneath, i.e. it leverages a lot from `vctrs` and `rlang`. 
 
+# Installation
+
+You can install the development version from GitHub.
+
+```{r}
+# install.packages("devtools")
+devtools::install_github("romainfrancois/dance")
+```
+
+# Usage
+
 We'll illustrate tibble dancing with `iris` grouped by `Species`. 
 
 ```{r example}
