--- a/README.Rmd
+++ b/README.Rmd
@@ -153,7 +153,7 @@ Similarly `rumba()` can be used to apply several functions to a single column.
 g %>% 
   tango(
     rumba(Sepal.Width, mean = mean, median = median, .name = "Sepal_{fun}"), 
-    zumba(Petal.Width, mean = mean, median = median, .name = "Petal")
+    Petal = zumba(Petal.Width, mean = mean, median = median)
   )
 ```
 
