--- a/README.Rmd
+++ b/README.Rmd
@@ -12,11 +12,14 @@ knitr::opts_chunk$set(
   out.width = "100%"
 )
 ```
-# dance
+
+# dance <img src="man/figures/logo.png" align="right" />
 
 <!-- badges: start -->
 [![Travis build status](https://travis-ci.org/romainfrancois/dance.svg?branch=master)](https://travis-ci.org/romainfrancois/dance)
 <!-- badges: end -->
+
+![](https://media.giphy.com/media/GFBME4lzPVwxW/giphy.gif)
 
 Dancing `r emo::ji("woman_dancing")` with the stats, aka `tibble()` dancing `r emo::ji("man_dancing")`. 
 `dance` is a sort of reinvention of `dplyr` classic verbs, with a more modern stack 
