add lifecycle badge

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,10 +16,11 @@ knitr::opts_chunk$set(
 # dance <img src="man/figures/logo.png" align="right" />
 
 <!-- badges: start -->
+[![Lifecycle Status](https://img.shields.io/badge/lifecycle-experimental-blue.svg)](https://www.tidyverse.org/lifecycle/)
 [![Travis build status](https://travis-ci.org/romainfrancois/dance.svg?branch=master)](https://travis-ci.org/romainfrancois/dance)
 <!-- badges: end -->
 
-![](https://media.giphy.com/media/GFBME4lzPVwxW/giphy.gif)
+![](https://media.giphy.com/media/mnLGTXoWVzAfm/giphy.gif)
 
 Dancing `r emo::ji("woman_dancing")` with the stats, aka `tibble()` dancing `r emo::ji("man_dancing")`. 
 `dance` is a sort of reinvention of `dplyr` classic verbs, with a more modern stack 
